--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/assets/images/logoFinal.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CookPal</title>
+  <title>Cookpal</title>
 </head>
 
 <body>
